--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 5432:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d myapp_development -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -d memo_sprout_development -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -25,7 +25,7 @@ services:
     volumes:
       - .:/memo_sprout
       - bundle_data:/usr/local/bundle:cached
-      - node_modules:/myapp/node_modules
+      - node_modules:/memo_sprout/node_modules
     environment:
       TZ: Asia/Tokyo
     ports:
